# FDM_CUDA

./: .gitignore  ANALYSIS_PDE_MC_DISCREPANCY.md  ANALYZE_EARLY_REDEMPTION.md  BENCHMARK_UPDATE.md  BUGFIX_EARLY_REDEMPTION.md  BUGFIX_SUMMARY.txt  BUILD_CPU_ONLY.md  CLOUD_GPU_GUIDE.md  CMakeLists.txt  COLAB_BENCHMARK_RESULTS.md  COLAB_GUIDE.md  COLAB_HOW_IT_WORKS.md  COLAB_QUICKSTART.md  CROSSTERM_README.md  ELS_Pricer_Colab.ipynb  ELS_Pricer_CrossTerm_Colab.ipynb  ELS_Pricer_FP32_Benchmark_Colab.ipynb  ELS_Pricer_GPU_Benchmark.ipynb  ELS_Pricer_GPU_Benchmark_Extended.ipynb  ELS_Pricer_GPU_Benchmark_Extended_Fixed.ipynb  ELS_Pricer_GPU_Benchmark_Extended_Fixed_v2.ipynb  ELS_Pricer_GPU_Benchmark_Fixed.ipynb  ELS_Pricer_GPU_Benchmark_Fixed_v2.ipynb  ELS_Pricer_GPU_Benchmark_Simple.ipynb  FP32_QUICK_START.md  FP32_vs_FP64_Performance_Report.ipynb  GPU_EARLY_REDEMPTION_FIX.md  GPU_OPTIMIZATION_FIX.md  KI_TRACKING_BUG.md  Makefile.cpu  NOTEBOOK_FIX.md  OPTIMIZATION_IMPLEMENTATION.md  PERFORMANCE_REPORT_README.md  QUICK_START.md  README.md  benchmark_comprehensive  benchmark_large  benchmark_results_cpu.csv  colab_setup.sh  convert_to_fp32.sh  (+16 more)
backup_20251117_163858/examples/: benchmark_comprehensive.cpp  benchmark_cpu_vs_gpu.cpp  benchmark_gpu.cpp  benchmark_grid_scaling.cpp  benchmark_nt_scaling.cpp  main.cpp  validate_price.cpp
backup_20251117_163858/include/: ADISolver.h  ADISolver3D.h  ADISolverCrossTerm.h  ELSProduct.h  Grid2D.h  Grid3D.h
backup_20251117_163858/src/: Grid2D.cpp
examples/: benchmark_comprehensive.cpp  benchmark_cpu_vs_gpu.cpp  benchmark_gpu.cpp  benchmark_grid_scaling.cpp  benchmark_large.cpp  benchmark_nt_scaling.cpp  compare_crossterm.cpp  main.cpp  main_cpu.cpp  validate_price.cpp  validate_price_cpu.cpp
include/: ADISolver.h  ADISolver3D.h  ADISolverCrossTerm.h  CUDAADISolver.cuh  CUDAADISolverCrossTerm.cuh  ELSProduct.h  Grid2D.h  Grid3D.h  precision.h
src/: ADISolver.cpp  ADISolverCrossTerm.cpp  ELSProduct.cpp  Grid2D.cpp
src/cuda/: CUDAADISolver.cu  CUDAADISolverCrossTerm.cu  (+1 more)
tests/: test_cpu.cpp  test_pricing.cpp
(+6 files in other folders)
